fix upcoming movies layout bug

--- a/components/actors/ActorDetails.module.css
+++ b/components/actors/ActorDetails.module.css
@@ -1,6 +1,6 @@
 .actor-details-outer-container {
   background-color: #080708;
-  padding: 6.4rem 0 9.6rem 0;
+  padding-top: 6.4rem;
 }
 
 .actor-details-inner-container {
