--- a/components/movies/MovieList.module.css
+++ b/components/movies/MovieList.module.css
@@ -3,4 +3,5 @@
   grid-template-columns: repeat(5, 1fr);
   column-gap: 2.4rem;
   row-gap: 4.8rem;
+  padding-bottom: 9.6rem;
 }
