--- a/components/movies/MovieListSection.module.css
+++ b/components/movies/MovieListSection.module.css
@@ -1,7 +1,7 @@
 .outer-container {
   max-width: 100%;
   background-color: #080708;
-  padding: 4.8rem 0;
+  padding-top: 4.8rem;
 }
 
 .inner-container {
